# infra-guide

./: .gitignore  CHANGELOG.md  CHECKLIST.md  LICENSE  MANIFEST.in  PIPX_READY.md  PUBLISH_GUIDE.md  README.md  SETUP_SUMMARY.txt  pyproject.toml
.github/workflows/: publish.yml
infra_guide/: __init__.py  cicd.py  cli.py  completion.py  cost_estimator.py  detector.py  drift_detector.py  logo.py  policy_checker.py  preferences.py  project_inspector.py  runner.py  state_explorer.py  ui.py  update_checker.py  validators.py  web.py  workspace_manager.py
infra_guide/assets/: __init__.py
infra_guide/guides/: __init__.py  apply.py  destroy.py  init.py  plan.py
tests/: conftest.py  test_cicd.py  test_cli.py  test_completion.py  test_cost_estimator.py  test_detector.py  test_drift_detector.py  test_policy_checker.py  test_preferences.py  test_project_inspector.py  test_runner.py  test_state_explorer.py  test_update_checker.py  test_validators.py  test_web.py  test_workspace_manager.py
upload_env/: pyvenv.cfg
