[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-guide"
version = "0.8.0"
description = "An interactive TUI for Terraform and OpenTofu beginners with enterprise-grade features"
readme = "README.md"
authors = [
    { name = "Infrastructure Guide Team", email = "info@infra-guide.dev" }
]
maintainers = [
    { name = "Infrastructure Guide Team", email = "info@infra-guide.dev" }
]
# Use a simple SPDX expression string for `project.license` to satisfy
# modern packaging tooling (setuptools/pyproject validation).
license = "MIT"
requires-python = ">=3.8"
# `license-files` should be an array of paths per PEP/validation
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    # License classifiers are superseded by SPDX license expressions
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["terraform", "opentofu", "infrastructure", "iac", "devops", "cli", "tui", "terminal"]

dependencies = [
    "rich>=13.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/iamtejas23/infra-guide"
Documentation = "https://github.com/iamtejas23/infra-guide#readme"
Repository = "https://github.com/iamtejas23/infra-guide"
"Bug Tracker" = "https://github.com/iamtejas23/infra-guide/issues"
Changelog = "https://github.com/iamtejas23/infra-guide/releases"

[project.scripts]
infra-guide = "infra_guide.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["infra_guide*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"infra_guide.assets" = ["*.png"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
